2008-09-13  delx

    * Check if locale exists before setting LANG environment variables (#2102884)
    * ISO8859-* and eucXX encodings will get correct environment variables
    * Keep menubar when setting full screen mode in a secondary screen (#2090939)
    

2008-09-11  fabian

    * Fixed a bug that might crashes iTerm when there's a background image.
    * No longer override PATH when launching a program.
    
2008-09-10	fabian

	* Profile name changes or deletion now update bookmarks (bug #1762237).
	* Add bookmark dialog now clears the text entries, and automatically 
	  fills profiles from the selected bookmark (#1815642).
	* Tweaked full screen code to allow it work better with multiple monitors.
	* Added "xterm" into the terminal type drop box.
	
2008-09-09	fabian

	* Fixed a bug that crashes iTerm when one scrolls up with a lot of new text coming in.
    * Fixed a UTF decoding problem (#1867339, by sakamoto).
    * Fixed a bug when detecting user scroll.
    * Cleaned up code for 0.9.5.0909
	* Fixed a configure panel bug that fails to update the "blur" info.

2008-09-08	fabian

	* UI change: mid-button to paste -> mid-button to paste from clipboard.
	* Now "prompt on Close" only prompts when multiple sessions are open.
	* Added code to check OS version for the blur stuff.

2008-09-07	fabian

	* Incorporated the "blur" patch provided by Dean Scarff.
	* Incorporated the "drop folder" patch provided by Rafael Gaspar (#1789464).
	* Fixed the URL characters (#1773764)
	* Fixed the transparency setting bug.
	* Fixed "double-click selects pass the EOL" bug (#2065311 & #1765813).
	
2008-09-06	ujwal
	
	* Moved Growl notification of session bell from VT100Screen to VT100Session.
	* Disabled session bell Growl notification when key repeat is detected.
	
2008-09-04	fabian

	* Removed the close button of the About window (#1916989).
	* Fixed a script error (#1883879).
	* Fixed resizing background image problem (#1871380).